# metis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  plugins.yaml  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: devcontainer.json
.github/: release-please-config.json
.github/workflows/: cflite_batch.yml  cflite_pr.yml  codeql.yml  release-please.yml  scorecard.yml  test.yml
.venv_nonlinux_20260506_133357/: pyvenv.cfg
chromadb/: chroma.sqlite3
docs/: CHANGELOG.md  language-plugins.md  tool-plugins.md  triage-flow.md
docs/config/: review_code_paths.md
docs/providers/: adding-new-provider.md  anthropic.md  azure_openai.md  bedrock.md  bedrock_mantle.md  embedding-provider.md  gemini.md  llamacpp.md  ollama.md  vllm.md
docs/tools/: index.md  mcp.md  navigation.md  tree-sitter.md
examples/anthropic/: metis_anthropic_example.yaml
examples/azure_openai/: config.yaml
examples/bedrock/: metis_bedrock_example.yaml
examples/bedrock_mantle/: metis_bedrock_mantle_example.yaml
examples/focused_review_code/: metis_typescript_example.yaml
examples/gemini/: metis_gemini_example.yaml
examples/llamacpp/: metis_llamacpp_example.yaml
examples/ollama/: metis_ollama_example.yaml
examples/vllm/: metis_vllm_example.yaml
src/metis/: chat_model_options.py  configuration.py  engine.py  exceptions.py  metis.yaml  plugin_loader.py  reachability_settings.py  utils.py  version.py
src/metis/cli/: command_registry.py  command_runtime.py  commands.py  entry.py  exporters.py  report_template.html  review_cli.py  review_progress.py  triage_cli.py  utils.py
src/metis/cvss/: __init__.py  calculator.py
src/metis/engine/: __init__.py  core.py  diff_utils.py  helpers.py  index_context_service.py  indexing_service.py  llm_runner.py  model_tool_runner.py  options.py  reachability_common.py  reachability_file_service.py  reachability_service.py  repository.py  retrieval_support.py  review_aggregation.py  review_finding_adapter.py  review_reachability.py  review_service.py  review_validation.py  runtime.py  triage_constants.py  triage_service.py  triage_service_exec.py  triage_service_runtime.py
src/metis/engine/analysis/: __init__.py  base.py  c_family_analyzer.py  c_family_analyzer_common.py  c_family_analyzer_impl.py  c_family_ast.py  c_family_flow.py  c_family_helpers.py  c_family_macro.py  c_family_packet_context.py  c_family_xref.py  fallback_analyzer.py  generic_treesitter_analyzer.py  review_obligations.py  review_packets.py  review_risk.py  static_inventory.py  static_selectors.py  static_xref.py  treesitter_runtime.py
src/metis/engine/graphs/: __init__.py  ask.py  review.py  review_retrieval.py  review_tools.py  types.py  utils.py
src/metis/engine/reachability/: __init__.py  builder.py  c_family.py  c_family_ast.py  c_family_nodes.py  c_family_rules.py  confirmer.py  dedup.py  domain.py  domain_hints.py  file_focus.py  finding_accessors.py  finding_builder.py  finding_finalizer.py  finding_identity.py  finding_normalization.py  finding_paths.py  finding_taxonomy.py  finding_values.py  graph.py  graph_cache.py  graph_utils.py  heuristic_data.py  limits.py  llm_runner.py  llm_schemas.py  lock_order.py  models.py  options.py  post_filters.py  progress.py  prompt_guidance.py  review_output.py  scope.py  service.py  source_context.py  supplementary.py  supplementary_lenses.py  supplementary_parsing.py  supplementary_prompts.py  (+4 more)
src/metis/engine/reachability_common/: __init__.py  confirmer.py  dedup.py  domain_hints.py  finding_normalization.py  finding_taxonomy.py  graph_utils.py  heuristic_data.py  llm_runner.py  models.py  post_filters.py  project_sinks.py  source_context.py  supplementary.py  supplementary_lenses.py  supplementary_parsing.py  supplementary_prompts.py  supplementary_selection.py  tracing.py  utils.py
src/metis/engine/reachability_file_service_modular/: __init__.py  common.py  context.py  detectors.py  filters.py  graph.py  (+2 more)
src/metis/plugins/: __init__.py  aarch64_assembly_plugin.py  angular_plugin.py  base.py  c_family.py  c_plugin.py  cpp_plugin.py  csharp_plugin.py  dart_plugin.py  go_plugin.py  ipynb_plugin.py  java_plugin.py  javascript_plugin.py  kotlin_plugin.py  php_plugin.py  plugins.yaml  python_plugin.py  registry.py  ruby_plugin.py  rust_plugin.py  solidity_plugin.py  systemverilog_plugin.py  tb_plugin.py  terraform_plugin.py  typescript_plugin.py  verilog_plugin.py
src/metis/providers/: anthropic.py  azure_openai.py  base.py  bedrock.py  bedrock_mantle.py  config.py  embedding_adapter.py  gemini.py  llamacpp.py  ollama.py  openai.py  openai_compatible.py  openai_embeddings.py  registry.py  vllm.py
src/metis/sarif/: triage.py  utils.py  writer.py
src/metis/schemas/: review.schema.json
src/metis/usage/: __init__.py  collector.py  context.py  langchain.py  llamaindex.py  runtime.py  thread_context.py
src/metis/vector_store/: base.py  chroma_store.py  pgvector_store.py  retrievers.py
tests/: conftest.py  test_anthropic_provider.py  test_azure_provider.py  test_bedrock_mantle_provider.py  test_bedrock_provider.py  test_c_family_analyzer.py  test_cli_commands.py  test_cli_entry.py  test_cli_triage.py  test_cli_usage.py  test_configuration.py  test_cvss_all_in_one.py  test_cvss_calculator.py  test_cvss_fast_mode.py  test_diff_utils.py  test_engine_chroma.py  test_engine_core.py  test_engine_review.py  test_engine_tools_selection.py  test_gemini_provider.py  test_graph_utils.py  test_graphs.py  test_language_plugin_registry.py  test_llamacpp_provider.py  test_llm_runner.py  test_llm_runner_retry.py  test_metisignore.py  test_model_tool_runner.py  test_openai_compatible_provider.py  test_pg_backend_mocked_unit.py  test_plugins.py  test_provider_registry.py  test_provider_token_count.py  test_reachability_treesitter.py  test_reachability_triage.py  test_review_obligations.py  test_review_risk.py  test_review_schema_model.py  test_sarif.py  test_sarif_triage.py  (+14 more)
tests/data/: test_angular.component.ts  test_flutter.dart
tests/fuzzing/: safe_decode_fuzzer.py  unidiff_fuzzer.py
(+82 files in other folders)
