[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=82.0.1" ]

[project]
name = "metis"
version = "1.4.0"
description = "Metis is a command line tool for performing security code reviews using LLMs"
readme = "README.md"
keywords = [ "code-review", "llm", "security" ]
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "chromadb>=1.5.9",
  "langchain>=1.3.2",
  "langchain-openai>=1.2.2",
  "langgraph>=1.2.2",
  "llama-index>=0.14.22",
  "llama-index-llms-langchain>=0.8.0",
  "llama-index-vector-stores-chroma>=0.5.5",
  "pathspec>=1.1.1",
  "prompt-toolkit>=3.0.52",
  "pydantic>=2.13.4",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "tree-sitter>=0.25.2",
  "tree-sitter-language-pack!=1.6.3,>=1.6.2",
  "unidiff>=0.7.5",
]
optional-dependencies.azure = []
optional-dependencies.dev = [
  "metis[lint]",
  "metis[test]",
]
optional-dependencies.lint = [
  "bandit>=1.9.4",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
  "ruff>=0.15.15",
]
optional-dependencies.postgres = [
  "llama-index-vector-stores-postgres>=0.8.1",
]
optional-dependencies.test = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
]
scripts.metis = "metis.cli.entry:main"

[tool.setuptools]
include-package-data = true
package-data."metis.cli" = [ "report_template.html" ]
package-data."metis.plugins" = [
  "config/*.yaml",
  "languages/*.yaml",
  "manifests/*.yaml",
  "profiles/*.yaml",
]
package-data."metis.plugins.config" = [ "*.yaml" ]
package-data."metis.plugins.languages" = [ "*.yaml" ]
package-data."metis.plugins.manifests" = [ "*.yaml" ]
package-data."metis.plugins.profiles" = [ "*.yaml" ]
package-data."metis.schemas" = [ "*.json" ]
package-data.metis = [ "metis.yaml" ]

[tool.ruff]
lint.isort.force-single-line = true

[tool.pyproject-fmt]
keep_full_version = true
